--- a/.github/workflows/broken.yml
+++ b/.github/workflows/broken.yml
@@ -1,17 +1,17 @@
-name Build Test Deploy  # Missing colon
+name: Build-Test-Deploy
 
-on
+on:
   push:
     branches: [main]
 
 jobs:
- build-test-deploy:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: echo "build"
-    - name: Test
-        run: echo "test"   # Indentation error
-    - name: Deploy
-      run: echo "deploy"
+  monolith:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        run: echo "build"
+      - name: Test
+        run: echo "test"
+      - name: Deploy
+        run: echo "deploy"
